--- a/team-page.html
+++ b/team-page.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="cards">
-      <div class="card">
+      <div class="card" id="shift-better">
         <h3>SHIFT <em>BETTER</em>⚽️</h3>
         <ul>
           <li>
